Various small code improvements